// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScriptTagMigrationBanner /> should contain both re-install and permission update link for a single store 1`] = `
<div>
  <div
    aria-label=""
    class="ui-banner-banner-e3eb ui-banner-error-e3eb ui-banner-full-e3eb ui-banner-fill-e3eb"
    data-name="banner"
  >
    <div
      class="ui-banner-content-e3eb"
    >
      <div
        class="ui-banner-icon-e3eb"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <span
        class="ui-banner-text-e3eb"
      >
        <span>
          <b>
            Action required
          </b>
          :
           
          <a
            href="#"
          >
            Update your Shopify permissions
          </a>
           
          and 
          <span
            class=""
          >
            re-install
          </span>
           
          your chat using the
           
          1-click install method
           
          to ensure better chat stability by 
          <b>
            Scary Deadline
          </b>
        </span>
      </span>
    </div>
    <div
      class="ui-banner-rightitems-e3eb"
    />
  </div>
</div>
`;

exports[`<ScriptTagMigrationBanner /> should contain only permission update link for a single store 1`] = `
<div>
  <div
    aria-label=""
    class="ui-banner-banner-e3eb ui-banner-error-e3eb ui-banner-full-e3eb ui-banner-fill-e3eb"
    data-name="banner"
  >
    <div
      class="ui-banner-content-e3eb"
    >
      <div
        class="ui-banner-icon-e3eb"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <span
        class="ui-banner-text-e3eb"
      >
        <span>
          <b>
            Action required
          </b>
          :
           
          <a
            href="#"
          >
            Update your Shopify permissions
          </a>
           
           
          to ensure better chat stability by 
          <b>
            Scary Deadline
          </b>
        </span>
      </span>
    </div>
    <div
      class="ui-banner-rightitems-e3eb"
    />
  </div>
</div>
`;

exports[`<ScriptTagMigrationBanner /> should contain only permission update link for multiple stores 1`] = `
<div>
  <div
    aria-label=""
    class="ui-banner-banner-e3eb ui-banner-error-e3eb ui-banner-full-e3eb ui-banner-fill-e3eb"
    data-name="banner"
  >
    <div
      class="ui-banner-content-e3eb"
    >
      <div
        class="ui-banner-icon-e3eb"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <span
        class="ui-banner-text-e3eb"
      >
        <span>
          <b>
            Action required
          </b>
          :
           
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            Update your Shopify permissions
          </a>
           
           
          to ensure better chat stability by 
          <b>
            Scary Deadline
          </b>
        </span>
      </span>
    </div>
    <div
      class="ui-banner-rightitems-e3eb"
    />
  </div>
</div>
`;

exports[`<ScriptTagMigrationBanner /> should contain only re-install link for a single store 1`] = `
<div>
  <div
    aria-label=""
    class="ui-banner-banner-e3eb ui-banner-error-e3eb ui-banner-full-e3eb ui-banner-fill-e3eb"
    data-name="banner"
  >
    <div
      class="ui-banner-content-e3eb"
    >
      <div
        class="ui-banner-icon-e3eb"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <span
        class="ui-banner-text-e3eb"
      >
        <span>
          <b>
            Action required
          </b>
          :
           
          <span
            class="text-capitalize"
          >
            re-install
          </span>
           
          your chat using the
           
          <a
            to="/app/settings/channels/gorgias_chat/test-chat-id/installation"
          >
            1-click install method
          </a>
           
          to ensure better chat stability by 
          <b>
            Scary Deadline
          </b>
        </span>
      </span>
    </div>
    <div
      class="ui-banner-rightitems-e3eb"
    />
  </div>
</div>
`;

exports[`<ScriptTagMigrationBanner /> should contain only re-install link for multiple stores 1`] = `
<div>
  <div
    aria-label=""
    class="ui-banner-banner-e3eb ui-banner-error-e3eb ui-banner-full-e3eb ui-banner-fill-e3eb"
    data-name="banner"
  >
    <div
      class="ui-banner-content-e3eb"
    >
      <div
        class="ui-banner-icon-e3eb"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <span
        class="ui-banner-text-e3eb"
      >
        <span>
          <b>
            Action required
          </b>
          :
           
          <span
            class="text-capitalize"
          >
            re-install
          </span>
           
          your chat using the
           
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            1-click install method
          </a>
           
          to ensure better chat stability by 
          <b>
            Scary Deadline
          </b>
        </span>
      </span>
    </div>
    <div
      class="ui-banner-rightitems-e3eb"
    />
  </div>
</div>
`;

exports[`<ScriptTagMigrationBanner /> should contain re-install link for a single store and permission update link for multiple stores 1`] = `
<div>
  <div
    aria-label=""
    class="ui-banner-banner-e3eb ui-banner-error-e3eb ui-banner-full-e3eb ui-banner-fill-e3eb"
    data-name="banner"
  >
    <div
      class="ui-banner-content-e3eb"
    >
      <div
        class="ui-banner-icon-e3eb"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <span
        class="ui-banner-text-e3eb"
      >
        <span>
          <b>
            Action required
          </b>
          :
           
          <a
            to="/app/settings/channels/gorgias_chat"
          >
            Update your Shopify permissions
          </a>
           
          and 
          <span
            class=""
          >
            re-install
          </span>
           
          your chat using the
           
          1-click install method
           
          to ensure better chat stability by 
          <b>
            Scary Deadline
          </b>
        </span>
      </span>
    </div>
    <div
      class="ui-banner-rightitems-e3eb"
    />
  </div>
</div>
`;

exports[`<ScriptTagMigrationBanner /> should contain re-install link for multiple stores and permission update link for a single store 1`] = `
<div>
  <div
    aria-label=""
    class="ui-banner-banner-e3eb ui-banner-error-e3eb ui-banner-full-e3eb ui-banner-fill-e3eb"
    data-name="banner"
  >
    <div
      class="ui-banner-content-e3eb"
    >
      <div
        class="ui-banner-icon-e3eb"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <span
        class="ui-banner-text-e3eb"
      >
        <span>
          <b>
            Action required
          </b>
          :
           
          <a
            href="#"
          >
            Update your Shopify permissions
          </a>
           
          and 
          <span
            class=""
          >
            re-install
          </span>
           
          your chat using the
           
          1-click install method
           
          to ensure better chat stability by 
          <b>
            Scary Deadline
          </b>
        </span>
      </span>
    </div>
    <div
      class="ui-banner-rightitems-e3eb"
    />
  </div>
</div>
`;
